compiler/testData/cli/jvm/optInEmptyMessageFir.out
warning: ATTENTION!
 This build uses in-dev FIR:
  -Xuse-fir
compiler/testData/cli/jvm/optInEmptyMessageFir.kt:8:5: error: this declaration needs OptIn. Its usage must be marked with '@EmptyMarker' or '@OptIn(EmptyMarker::class)'
    foo()
    ^
COMPILATION_ERROR
